# cyborg

./: .gitignore  CMakeLists.txt  README.rst  example_reactor.xml  install.py
cmake/: FindSCALE.cmake
inputs/: 1_Enrichment_2_Reactor.xml  README.rst
inputs/MOX-BWR/: MOX_src_1_Reactor_1_year.xml  arp_MOX_1y.inp  obiwan_MOX_1y.inp
inputs/UOX-BWR/: 1_Enrichment_1_Reactor_1y.xml  arp_1y.inp  obiwan_1y.inp
inputs/UOX-PWR/: arp_1y.inp  cyborg_w17_42.xml  obiwan_1y.inp
scripts/: arp2obl.py
src/: CMakeLists.txt  cyclus_origen_interface.cpp  cyclus_origen_interface.h  orglib_default_location.h.in  reactor.cc  reactor.h  reactor_tests.cc  reactor_tests.h
src/tests/: CMakeLists.txt  cyborg_unit_test_driver.cc  tst_cyclus_origen_interface.cpp
tests/: CMakeLists.txt  cyborg_unit_test_driver.cc  origen06.mod.1.out  tst_cyclus_origen_interface.cpp  tst_interface_correctness.cpp
